; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/mISDN/extr_netjet.c_WriteISAC_nj.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/mISDN/extr_netjet.c_WriteISAC_nj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tiger_hw = type { i32, i64 }

@NJ_AUXDATA = common dso_local global i64 0, align 8
@NJ_ISAC_OFF = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32)* @WriteISAC_nj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @WriteISAC_nj(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.tiger_hw*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.tiger_hw*
  store %struct.tiger_hw* %9, %struct.tiger_hw** %7, align 8
  %10 = load %struct.tiger_hw*, %struct.tiger_hw** %7, align 8
  %11 = getelementptr inbounds %struct.tiger_hw, %struct.tiger_hw* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = and i32 %12, 252
  store i32 %13, i32* %11, align 8
  %14 = load i32, i32* %5, align 4
  %15 = ashr i32 %14, 4
  %16 = and i32 %15, 3
  %17 = load %struct.tiger_hw*, %struct.tiger_hw** %7, align 8
  %18 = getelementptr inbounds %struct.tiger_hw, %struct.tiger_hw* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = or i32 %19, %16
  store i32 %20, i32* %18, align 8
  %21 = load %struct.tiger_hw*, %struct.tiger_hw** %7, align 8
  %22 = getelementptr inbounds %struct.tiger_hw, %struct.tiger_hw* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.tiger_hw*, %struct.tiger_hw** %7, align 8
  %25 = getelementptr inbounds %struct.tiger_hw, %struct.tiger_hw* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @NJ_AUXDATA, align 8
  %28 = add nsw i64 %26, %27
  %29 = call i32 @outb(i32 %23, i64 %28)
  %30 = load i32, i32* %6, align 4
  %31 = load %struct.tiger_hw*, %struct.tiger_hw** %7, align 8
  %32 = getelementptr inbounds %struct.tiger_hw, %struct.tiger_hw* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @NJ_ISAC_OFF, align 8
  %35 = add nsw i64 %33, %34
  %36 = load i32, i32* %5, align 4
  %37 = and i32 %36, 15
  %38 = shl i32 %37, 2
  %39 = sext i32 %38 to i64
  %40 = add nsw i64 %35, %39
  %41 = call i32 @outb(i32 %30, i64 %40)
  ret void
}

declare dso_local i32 @outb(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
